--- a/_config.yml
+++ b/_config.yml
@@ -4,5 +4,5 @@ markdown: redcarpet
 sass:
   sass_dir: _sass
 baseurl: /recipe-book
-permalink: /:title
+permalink: recipes/:categories/:title
 exclude: [README.md, Rakefile, Gemfile]
