updated urls for sub-domain

--- a/_config.yml
+++ b/_config.yml
@@ -3,6 +3,5 @@ description: A collection of my favorite recipes
 markdown: redcarpet
 sass:
   sass_dir: _sass
-baseurl: /recipe-book
-permalink: recipes/:categories/:title.html
+permalink: :categories/:title.html
 exclude: [README.md, Rakefile, Gemfile]
