--- a/_config.yml
+++ b/_config.yml
@@ -1,5 +1,5 @@
 title: Not a food blog.
-tagline: A digital recipe book—These are some of my favorite along with some new ones I’m just trying out.
+tagline: A digital recipe book—These are some of my favorites along with some new ones I’m just trying out.
 markdown: redcarpet
 sass:
   sass_dir: _sass
