--- a/package.json
+++ b/package.json
@@ -4,7 +4,9 @@
   "description": "Website source for a collection of some of my favorite recipes, as well as some new ones I'm just trying out.",
   "main": "index.js",
   "scripts": {
-    "start": "npx eleventy --serve",
+    "start": "run-p -c serve watch:css",
+    "serve": "npx eleventy --serve",
+    "watch:css": "npx gulp watchFiles",
     "build": "npx eleventy"
   },
   "repository": {
@@ -21,6 +23,7 @@
     "@11ty/eleventy": "^0.8.3",
     "gulp": "^4.0.2",
     "gulp-postcss": "^8.0.0",
+    "npm-run-all": "^4.1.5",
     "postcss-import": "^12.0.1"
   }
 }
