--- a/package.json
+++ b/package.json
@@ -4,10 +4,10 @@
   "description": "Website source for a collection of some of my favorite recipes, as well as some new ones I'm just trying out.",
   "main": "index.js",
   "scripts": {
-    "start": "run-p -c serve watch:css",
+    "start": "npm-run-all -p -c serve sass:dev",
     "serve": "npx eleventy --serve",
-    "watch:css": "npx gulp watchFiles",
-    "build": "npx eleventy && npx gulp compileCSS"
+    "sass:dev": "sass --load-path=node_modules src/scss:site/css --watch",
+    "build": "npx eleventy"
   },
   "repository": {
     "type": "git",
@@ -20,10 +20,9 @@
   },
   "homepage": "https://github.com/levimcg/recipe-book#readme",
   "devDependencies": {
-    "@11ty/eleventy": "^0.8.3",
-    "gulp": "^4.0.2",
-    "gulp-postcss": "^8.0.0",
+    "@11ty/eleventy": "^0.12.1",
+    "modern-css-reset": "^1.4.0",
     "npm-run-all": "^4.1.5",
-    "postcss-import": "^12.0.1"
+    "sass": "^1.32.11"
   }
 }
