--- a/package.json
+++ b/package.json
@@ -21,6 +21,8 @@
   "homepage": "https://github.com/levimcg/recipe-book#readme",
   "devDependencies": {
     "@11ty/eleventy": "^0.12.1",
+    "markdown-it": "^12.0.6",
+    "markdown-it-anchor": "^7.1.0",
     "modern-css-reset": "^1.4.0",
     "npm-run-all": "^4.1.5",
     "sass": "^1.32.11"
